k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-store
  labels:
    app.kubernetes.io/name: retail-store
    app.kubernetes.io/part-of: retail-platform-2026
